# ESP32-TUX-BAMBULAB

./: .gitignore  .markdownlint.json  .markdownlintignore  BAMBU_ANALYSIS_SUMMARY.md  BAMBU_CODE_REFERENCE.md  BAMBU_INTEGRATION_STATUS.md  BAMBU_QUICKSTART.md  BAMBU_TECHNICAL_DESIGN.md  CAROUSEL_COMPLETE.md  CAROUSEL_DOCS_INDEX.md  CAROUSEL_LIVE_DATA.md  ESP_IDF_INSTALL_WORKAROUND.md  INSTALLATION_STATUS.md  INTEGRATION_PLAN.md  LICENSE  MQTT_QUERY_TEST.md  QUICK_CONFIG.md  README.md  SSL_BYPASS_IMPLEMENTATION.md  download_toolchains.sh  example_printer_state.json  flash_quick.sh  get_bambu_cert.sh  monitor.sh  sdkconfig.backup_esp32  sdkconfig.bak  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.esp32s3.macbook  sdkconfig.esp32s3.macmini  start_monitor.sh  test_bambu_mqtt.py
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md
assets/: Body.stl  Front.stl  Housing_WT32-SC01_Plus_V3.3mf
components/: lv_conf.h
components/ota/: CMakeLists.txt  ota.c  ota.h
docs/: BAMBU_DOCUMENTATION_INDEX.md  BAMBU_INTEGRATION_STATUS.md  BAMBU_START_HERE.txt  CAMERA_SNAPSHOT_GUIDE.md  CAROUSEL_FEATURE.md  CAROUSEL_IMPLEMENTATION_SUMMARY.md  CAROUSEL_QUICKSTART.md  DISPLAY_FIX_REPORT.md  FLASHING_GUIDE.md  (+16 more)
main/: CMakeLists.txt  Kconfig.projbuild  gui.hpp  lv_conf.h  lvgl_v9_stubs.hpp  main.cpp  main.hpp
main/apps/printer/: printericons.h
main/devices/: conf_WT32SCO1-Plus.h  conf_WT32SCO1-V33.h
main/events/: gui_events.hpp
main/fonts/: fa_icons.h  font_fa_14.c  font_fa_printer_24.c  font_fa_printer_42.c  font_montserrat_int_14.c  font_montserrat_int_16.c  font_montserrat_int_24.c  font_montserrat_int_32.c  font_montserrat_pl_14.c  font_montserrat_pl_16.c  font_montserrat_pl_24.c  font_montserrat_pl_32.c
main/helpers/: helper_bambu.hpp  helper_display.hpp  helper_sntp.hpp  helper_storage_health.c  helper_storage_health.h  helper_storage_health.hpp  helper_storage_health.hpp.old  wifi_prov_mgr.hpp
main/i18n/: lang.hpp
main/widgets/: carousel_widget.hpp
(+51 files in other folders)
